<?xml version="1.0" encoding="UTF-8"?>
<!--

   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-parent</artifactId>
        <version>61</version>
    </parent>
    <packaging>pom</packaging>
    <artifactId>commons-jci2</artifactId>
    <version>2.0-SNAPSHOT</version>
    <name>Apache Commons JCI</name>
    <description>
        Apache Commons JCI is a java compiler interface.
        It can be used to compile Java itself, or any other language that can be compiled to Java classes (e.g. groovy or javascript).
        It is well integrated with a FAM (FilesystemAlterationMonitor) that can be used with the JCI compiling/reloading classloader.
        All the currently supported compilers feature in-memory compilation.
    </description>
    <url>http://commons.apache.org/proper/commons-jci/</url>
    <inceptionYear>2004</inceptionYear>
    <issueManagement>
        <system>JIRA</system>
        <url>https://issues.apache.org/jira/browse/JCI</url>
    </issueManagement>
    <modules>
        <module>fam</module>
        <module>core</module>
        <module>compilers/eclipse</module>
        <module>compilers/janino</module>
        <module>compilers/groovy</module>
        <module>compilers/rhino</module>
        <module>examples</module>
        <!-- <module>compilers/jsr199</module> -->
    </modules>

    <!-- Optional profiles for currently disabled modules -->
    <profiles>
        <profile>
            <!-- N.B. requires Java 1.6+ to compile -->
            <id>compiler-jsr199</id>
            <modules>
                <module>compilers/jsr199</module>
            </modules>
        </profile>
    </profiles>

    <developers>
        <developer>
            <id>tcurdt</id>
            <name>Torsten Curdt</name>
            <email>tcurdt at apache.org</email>
            <organization>ASF</organization>
            <organizationUrl>http://www.apache.org/</organizationUrl>
            <timezone>+1</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Don Brown</name>
            <email>mrdon at apache.org</email>
            <organization>ASF</organization>
            <organizationUrl>http://www.apache.org/</organizationUrl>
        </contributor>
        <contributor>
            <name>Joerk Heinicke</name>
            <email>joerg.heinicke at gmx.de</email>
        </contributor>
        <contributor>
            <name>Mark Proctor</name>
            <email>mproctor at codehaus.org</email>
        </contributor>
    </contributors>
    <scm>
        <connection>scm:git:https://gitbox.apache.org/repos/asf/commons-jci</connection>
        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/commons-jci</developerConnection>
        <url>https://gitbox.apache.org/repos/asf/commons-jci</url>
    </scm>
    <build>
	    <defaultGoal>clean verify javadoc:javadoc</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <org.apache.commons.logging.Log>org.apache.commons.logging.impl.SimpleLog</org.apache.commons.logging.Log>
                        <!-- Quieten the test output -->
                        <org.apache.commons.logging.simplelog.defaultlog>error</org.apache.commons.logging.simplelog.defaultlog>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/bin.xml</descriptor>
                        <descriptor>src/assembly/src.xml</descriptor>
                    </descriptors>
                    <tarLongFileMode>gnu</tarLongFileMode>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jci-jar-manifest</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/osgi"/>
                                <touch file="${project.build.directory}/osgi/MANIFEST.MF"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${commons.site-plugin.version}</version>
                <configuration>
                    <skip>${maven-site-plugin.skip}</skip>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh-external</artifactId>
                <version>3.5.3</version>
            </extension>
        </extensions>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <tags>
                        <tag>TODO</tag>
                        <tag>@todo</tag>
                        <tag>FIXME</tag>
                        <tag>@deprecated</tag>
                    </tags>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${commons.surefire.version}</version>
                <configuration>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <configuration>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${commons.jxr.version}</version>
                <configuration>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${commons.javadoc.version}</version>
                <configuration>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <properties>
        <maven-site-plugin.skip>false</maven-site-plugin.skip>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <jacoco.skip>${env.JACOCO_SKIP}</jacoco.skip>
        <commons.componentid>jci</commons.componentid>
        <commons.module.name>org.apache.commons.jci2</commons.module.name>
        <commons.jira.id>JCI</commons.jira.id>
        <commons.jira.pid>12310650</commons.jira.pid>
        <!-- configuration bits for cutting a release candidate -->
        <commons.release.version>2.0</commons.release.version>
        <commons.rc.version>RC1</commons.rc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.2</version>
            </dependency>
            <!-- compiler-eclipse -->
            <dependency>
                <groupId>org.eclipse.jdt.core.compiler</groupId>
                <artifactId>ecj</artifactId>
                <version>4.6.1</version>
            </dependency>
            <!-- compiler-groovy -->
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>3.0.19</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- compiler-janino -->
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>2.6.1</version>
            </dependency>
            <!-- compiler-rhino -->
            <dependency>
                <groupId>rhino</groupId>
                <artifactId>js</artifactId>
                <version>1.7R2</version>
            </dependency>
            <!-- core (also fam test) -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.14.0</version>
            </dependency>
            <!-- examples -->
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>1.5.0</version>
            </dependency>
            <!-- examples -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
            </dependency>
            <dependency>
                <!-- core(test) -->
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>9.5</version>
            </dependency>

            <!-- test dependencies -->
            <dependency>
                 <!-- core -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.13.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
